<resources>
    <string name="app_name">app.1 - cally</string>
    <string name="btn_0">0</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_dot">.</string>
    <string name="dot_format">0.</string>
    <string name="btn_clear">C</string>
    <string name="btn_delete">⌫</string>
    <string name="btn_percent">%</string>
    <string name="btn_divide">÷</string>
    <string name="btn_multiply">×</string>
    <string name="btn_subtract">−</string>
    <string name="btn_add">+</string>
    <string name="btn_equals">=</string>
    <string name="error">Error</string>
    <string name="expression_format">%1$s %2$s %3$s</string>
</resources>